# SimplerDB

./: MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: basic_usage.py
simplerdb/: __init__.py  base.py  exceptions.py  transaction.py
simplerdb/connectors/: __init__.py  chromadb.py  mssql.py  mysql.py  oracle.py  pgvector.py  postgres.py  redis_connector.py  sqlite.py
simplerdb/utils/: __init__.py  logging.py  pooling.py  sanitization.py
